feat: updated home page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,4 +85,12 @@ body {
 	@apply z-10 absolute top-0 left-0 md:left-1/4 transform -translate-y-1/2 text-gray-500 p-3 rounded-full shadow-md hover:bg-[#0e62e4] backdrop-blur-md hover:text-gray-300 transition-all cursor-pointer;
 }
 
+/* .banner-btn-prev {
+	@apply z-10 absolute top-1/2 left-0 transform -translate-y-1/2 text-gray-500 p-3 rounded-full shadow-md hover:bg-[#0e62e4] hover:text-gray-300 transition-all cursor-pointer;
+}
+
+.banner-btn-next {
+	@apply z-10 absolute top-1/2 right-0 transform -translate-y-1/2 text-gray-500 p-3 rounded-full shadow-md hover:bg-[#0e62e4] hover:text-gray-300 transition-all cursor-pointer;
+} */
+
 /* font-[family-name:var(--font-nunito-sans)] */
